<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="wrap302.nmu.assignment_6_task_2_server.MainActivity">

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="500dp"
			android:id="@+id/imageView" android:background="@drawable/tic_tac_toe"
			android:alpha="0.2"
			android:scaleType="fitCenter" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>
	<TextView
			android:text="@string/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="21dp"
			android:id="@+id/textView"
			android:textAppearance="@style/TextAppearance.AppCompat.Display1"
			android:textStyle="bold"
			android:padding="10dp" android:textColor="@android:color/background_dark" android:textSize="44sp"
			android:typeface="serif"/>

	<Button
			android:text="@string/btn_host_game"
			android:layout_width="150dp"
			android:layout_height="60dp"
			android:id="@+id/btnHostGame"
			android:background="@color/colorHost"
			android:layout_marginTop="19dp"
			android:layout_below="@+id/lblPlayer" android:layout_alignLeft="@+id/btnExit"
			android:layout_alignStart="@+id/btnExit"/>

	<Button
			android:text="@string/btn_join_game"
			android:layout_width="150dp"
			android:layout_height="60dp"
			android:id="@+id/btnJoinGame"
			android:background="@color/colorPrimary"
			android:layout_marginTop="13dp" android:layout_below="@+id/btnHostGame"
			android:layout_alignLeft="@+id/btnHostGame" android:layout_alignStart="@+id/btnHostGame"/>
	<Button
			android:text="@string/how_to_play"
			android:layout_width="150dp"
			android:layout_height="60dp"
			android:id="@+id/btnHowToPlay"
			android:background="?android:attr/colorActivatedHighlight"
			android:layout_marginTop="41dp"
			android:layout_below="@+id/btnJoinGame" android:layout_alignLeft="@+id/btnJoinGame"
			android:layout_alignStart="@+id/btnJoinGame"/>

	<Button
			android:text="@string/exit"
			android:layout_width="150dp"
			android:layout_height="60dp"
			android:id="@+id/btnExit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
			android:layout_marginBottom="50dp" android:background="@android:color/holo_red_light"/>
	<TextView
			android:text="@string/welcome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/lblPlayer"
			android:layout_marginTop="13dp" android:layout_below="@+id/textView"
			android:layout_centerHorizontal="true" android:textStyle="bold"/>
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/ic_settings_black_48dp"
			android:id="@+id/btnSettings"
			android:layout_alignParentTop="true" android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"/>

</RelativeLayout>
